outputs/generated_env/kubernetes/network_policies/cybersim-subnet-1-allow-grafana-loki-to-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cyberbattlesim
    cybersim/generated: 'true'
  name: allow-grafana-loki-to-grafana
  namespace: cybersim-subnet-1
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cybersim-subnet-2
      podSelector:
        matchLabels:
          app.kubernetes.io/name: grafana-loki
    ports:
    - port: 3000
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  policyTypes:
  - Ingress
